# logging

./: CMakeLists.txt  README.md
doc/factory_blog_src/: Logging.sln
doc/factory_blog_src/AsyncDynamicObserver/: AboutDlg.h  AsyncDynamicObserver.cpp  AsyncDynamicObserver.dsp  AsyncDynamicObserver.h  AsyncDynamicObserver.rc  AsyncDynamicObserver.vcxproj  DlgObserverData.cpp  DlgObserverData.h  LogDistributor.cpp  LogDistributor.h  LogMessageQueue.cpp  LogObserver.cpp  LogObserver.h  MainFrm.cpp  PpCfgObserver.h  Resource.h  StdAfx.cpp  ThreadBase.h
doc/factory_blog_src/DistributorMQ/: ConsoleObserver.h  DistributorMQ.cpp  DistributorMQ.dsp  DistributorMQ.h  DistributorMQ.rc  DistributorMQ.vcxproj  DlgObserverData.cpp  LogDistributor.cpp  LogDistributor.h  LogMessage.h  LogMessageQueue.h  LoggerThread.cpp  LoggerThread.h  MainFrm.cpp  MainFrm.h  PpCfgObserver.cpp  Resource.h  StdAfx.cpp  StdAfx.h  ThreadBase.cpp  ThreadBase.h
doc/factory_blog_src/DistributorMQ/res/: AsyncDynamicObserver.rc2
doc/factory_blog_src/DynamicObserver/: AboutDlg.cpp  ConsoleObserver.cpp  ConsoleObserver.h  DlgObserverData.cpp  DlgObserverData.h  DynamicObserver.cpp  DynamicObserver.dsp  DynamicObserver.h  DynamicObserver.rc  DynamicObserver.vcxproj  LogDistributor.cpp  LogDistributor.h  LogMessage.h  LogObserver.h  MainFrm.cpp  MainFrm.h  PpCfgObserver.cpp  PpCfgObserver.h  Resource.h  StdAfx.cpp
doc/factory_blog_src/DynamicObserver/res/: DynamicObserver.rc2
inc/container/: circular_buffer.hpp
inc/container/internal/: circular_buffer.tcc
inc/factory_blog/async_observer/: console_observer.hpp  distributor.hpp  message.hpp  message_queue.hpp  observer.hpp
inc/factory_blog/dynamic_observer/: console_observer.hpp  distributor.hpp  message.hpp  observer.hpp
inc/log/: console_observer.hpp  distributor.hpp  message.hpp  observer.hpp  source.hpp
inc/queues/: mpmc_buffer.hpp  mpsc_queue.hpp  spsc_buffer.hpp  spsc_queue.hpp
inc/thread/: safe_circular_buffer.hpp  safe_queue.hpp  semaphore.hpp
src/: CMakeLists.txt
src/factory_blog/: CMakeLists.txt
src/factory_blog/async_observer/: console_observer.cpp  distributor.cpp  message_queue.cpp  observer.cpp
src/factory_blog/dynamic_observer/: console_observer.cpp  distributor.cpp
src/log/: distributor.cpp  observer.cpp
tests/: CMakeLists.txt
tests/benchmark/: CMakeLists.txt  logging_perf.cpp  timer.hpp
tests/benchmark/queues/: main.cpp
tests/test_impl/: bench_main.cpp  core.cpp  core.hpp  fixed_string.hpp  main.cpp  message.hpp  sink.hpp  source.hpp  timer.hpp
tests/unit_tests/: CMakeLists.txt
tests/unit_tests/container/: circular_buffer_test.cpp
tests/unit_tests/factory_blog/: CMakeLists.txt
tests/unit_tests/factory_blog/async_observer/: ado_test.cpp  message_queue_test.cpp
tests/unit_tests/factory_blog/dynamic_observer/: sdo_test.cpp
tests/unit_tests/log/: log_test.cpp  source_test.cpp
tests/unit_tests/queues/: mpmc_buffer_test.cpp  mpsc_queue_test.cpp  queues_test.hpp  spsc_buffer_test.cpp  spsc_queue_test.cpp
tests/unit_tests/thread/: safe_circular_buffer_test.cpp
